# UQExamGrabber

./: .gitignore  ExamGrabber.py  README.md  UQExamGrabber.py  inject-template.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint.yml
uqeg/: uqeg.py
uqtools/: cli.py  driver.py  env.py  examgrabber.py  grade.py  timetable.py
