[metadata]
name = uqtools
version = 0.4.0
author = Jed Willick
# author_email = 
url = https://github.com/jedwillick/uqtools
description = A collection of utility scripts for scrapping UQ.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
        # How mature is this project? Common values are
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Students',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.9',
        "Programming Language :: Python :: 3.10",
        'Programming Language :: Python :: 3 :: Only',

[options]
zip_safe = False
python_requires = >= 3.9,
packages = uqtools
install_requires =
    python-dotenv
    selenium
    reportlab

[options.entry_points]
console_scripts =
    uqtools = uqtools.cli:main